--- a/source/pom.xml
+++ b/source/pom.xml
@@ -42,7 +42,7 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>productVisibility.Main</mainClass>
+									<mainClass>main.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
